name:                janus-beseder
version:             0.1.1.0
-- synopsis:
-- description:
homepage:            https://github.com/oofp/janus-beseder#readme
license:             OtherLicense
license-file:        LICENSE
author:              oofp
maintainer:          oofp
copyright:           2018-2020 oofp
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  ghc-options:         -Wall -fomit-interface-pragmas -fprint-potential-instances  -fno-warn-unticked-promoted-constructors 
  exposed-modules:     Beseder.Janus.JanusCallProv
                     , Beseder.Janus.JanusCallProvImpl
  other-modules:       
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , network
                     , text
                     , containers
                     , async
                     , stm
                     , haskus-utils
                     , mtl
                     , random
                     , beseder
                     , janus-connector
                     , network
                     , bytestring
                     , pretty-simple
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable JanusB2B
  hs-source-dirs:      Examples/JanusB2B
  main-is:             Main.hs
  other-modules:       JanusB2BApp
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-T -dshow-passes -fomit-interface-pragmas -fprint-potential-instances
  build-depends:       base
                     , janus-beseder
                     , janus-connector
                     , beseder
                     , text
                     , mtl
                     , protolude
                     , haskus-utils
                     , hslogger
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable JanusB2BTimer
  hs-source-dirs:      Examples/JanusB2B
  main-is:             MainTimer.hs
  other-modules:       JanusB2BTimerSkip2App
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-T -dshow-passes -fomit-interface-pragmas -fprint-potential-instances
  build-depends:       base
                     , janus-beseder
                     , janus-connector
                     , beseder
                     , text
                     , mtl
                     , protolude
                     , haskus-utils
                     , hslogger
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude


source-repository head
  type:     git
  location: https://github.com/oofp/janus-beseder
